edited html file-replaced 'script'tag with 'strong' tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>Static HTML Site</title>
       </head>
       <body>
-        <h1>This is static html file deployed through <strong>CICD pipeline</script>.</h1>
+        <h1>This is static html file deployed through <strong>CICD pipeline</strong>.</h1>
       </body>
     </html>
